# kafka-spark-streaming

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: config.json  config.py  events.avsc  producer.py  publish.py
src/cassandra/: setup.sql
src/consumer/: Dockerfile  consumer.py  spark_streaming.py
src/producer/: Dockerfile  producer.py  publish.py
