[project]
name = "kafka-spark-streaming"
version = "0.1.0"
description = "Real-time event streaming pipeline: Kafka -> Spark -> Cassandra"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka[avro]>=2.4.0",
    "fastavro>=1.9.0",
    "pyspark>=3.5.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
