[project]
name = "kafka-spark-streaming"
version = "0.1.0"
description = "Real-time event streaming pipeline: Kafka -> Spark -> Cassandra"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka[avro]>=2.15.0",
    "fastavro>=1.9.0",
    "pyspark>=3.5.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
# mock event generator: randomness is intentionally non-cryptographic
"src/producer/producer.py" = ["S311"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# confluent_kafka.avro ships partial stubs that don't export or type the
# Avro producer/schema-registry helpers used here. Treat it as a boundary.
module = ["confluent_kafka.*"]
follow_imports = "skip"
